[package]
name = "ownref"
version = "0.1.0"
edition = "2021"
description = "Provide the smart pointer type that bundles the data with its owner."
categories = ["rust-patterns"]
documentation = "https://docs.rs/ownref/"
repository = "https://github.com/jerry73204/ownref.git"
homepage = "https://github.com/jerry73204/ownref"
readme = "README.md"
license = "MIT"

[dependencies]

[dev-dependencies]
indexmap = "1.8.0"
